<resources>
    <string name="app_name">ColorMe</string>

    <string name="nav_saved">Saved</string>
    <string name="nav_generate">Generate</string>
    <string name="nav_random">Random</string>
    <string name="nav_explore">Explore</string>

    <string name="generate_title">New Palettes</string>
    <string name="generate_button_random">Random</string>
    <string name="generate_button_image">Generate palette from image</string>
    <string name="generate_button_scratch">Create palette from scratch</string>
    <string name="generate_or">OR</string>

    <string name="image_palette">Image to Palette</string>
    <string name="button_choose_image">Choose Image</string>
    <string name="button_camera">Camera</string>
    <string name="button_cancel">Cancel</string>

    <string name="explore_title">Explore</string>
    <string name="button_save">Save</string>

    <string name="saved_title">Saved Palettes</string>
    <string name="button_delete">Del</string>
    <string name="button_view">View</string>
    <string name="button_edit">Edit</string>
    <string name="button_share">Share</string>
    <string name="button_back">Back</string>
    <string name="button_change_info">Info</string>
    <string name="button_change_text">Text</string>

    <string name="scratch_palette">Create New Palette</string>
    <string name="tab_hex">HEX</string>
    <string name="pound">#</string>
    <string name="hex_label">Enter Hex Code</string>
    <string name="hex">FFFFFF</string>
    <string name="rgb">RGB</string>
    <string name="r">R</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="rgb_val">255</string>

    <string name="editText_name">Palette Name</string>

    <string name="view_heading">Heading</string>
    <string name="view_heading2">Heading 2</string>
    <string name="view_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras metus
        ante, mattis id mauris id, fermentum sagittis nibh. Praesent accumsan dignissim congue.</string>
</resources>