...
            android:layout_weight="1"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <Button
        android:id="@+id/button_random"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/generate_button_random"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_popup_sync"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:layout_constraintEnd_toStartOf="@+id/button_generate_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_generate" />

    <Button
        android:id="@+id/button_scratch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/generate_button_scratch"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_image"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
...
