...
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_explore" />
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_generate" />
    <item
        android:id="@+id/page_3"
        android:enabled="true"
...
